--- a/Site/src/locales/en-US.json
+++ b/Site/src/locales/en-US.json
@@ -20,7 +20,10 @@
         "Settings": "Settings",
         "LogOut": "Log out",
         "Users": "Users",
-        "Places": "Places"
+        "Places": "Places",
+        "Discover": "Discover",
+        "Description": "Description",
+        "Players": "Players"
     },
     "Messages": {
         "Greeting": "Hi, {username}!"
@@ -30,6 +33,21 @@
             "PostAStatus": "Post a status",
             "NoStatusPosts": "No status posts yet. Be the first to post one!",
             "PostStatusPrompt": "Post your status &ndash; your friends and followers can view how you're doing!"
+        },
+        "Games": {
+            "NoGames": "No games yet. Be the first to create one!",
+            "Create": {
+                "CreateAPlace": "Create a place",
+                "PlaceName": "Place name",
+                "PlaceNamePlaceholder": "Make sure to make it accurate",
+                "DescriptionPlaceholder": "Up to 1000 characters",
+                "ServerIp": "Server IP",
+                "ServerIpPlaceholder": "You can use a URL instead of an IP if you wish",
+                "ServerPort": "Server port",
+                "ServerPortHelp": "Using a port number lower than 49152 may not work correctly.",
+                "MaxPlayers": "Player limit",
+                "PrivateServer": "Private server?"
+            }
         }
     }
 }
